--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-.text {
-  text-align: center;
+.App {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  padding-bottom: 24px;
 }
